fixed build errors

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -45,25 +45,13 @@
                                 name="services"
                                 id="services"
                             >
-                                <option
-                                    id="webDev"
-                                    name="webDev"
-                                    value="webDev"
-                                >
+                                <option id="webDev" value="webDev">
                                     Website Creation
                                 </option>
-                                <option
-                                    id="landing"
-                                    name="landing"
-                                    value="landing"
-                                >
+                                <option id="landing" value="landing">
                                     Landing Page
                                 </option>
-                                <option
-                                    id="webHosting"
-                                    name="webHosting"
-                                    value="hosting"
-                                >
+                                <option id="webHosting" value="hosting">
                                     Web Hosting
                                 </option>
                             </select>
